updates to aid with transition timing issue on reload and leverage dvh on mobile

--- a/src/sass/components/ThemeToggle.scss
+++ b/src/sass/components/ThemeToggle.scss
@@ -46,22 +46,6 @@
       stroke: var(--icon-fill);
       stroke-width: 2px;
     }
-
-    @media (prefers-reduced-motion: no-preference) {
-      & > .sun {
-        transition: transform .5s var(--ease-elastic-3);
-      }
-
-      & > .sun-beams {
-        transition:
-          transform .5s var(--ease-elastic-4)
-          opacity .5s var(--ease-3);
-      }
-
-      & .moon > circle {
-        transition: transform .25s var(--ease-out-5);
-      }
-    }
   }
 
   &:is(:hover, :focus-visible) {
@@ -71,6 +55,26 @@
 
     & > .sun-beams {
       stroke: var(--icon-fill-hover);
+    }
+  }
+}
+
+[data-loading="complete"] {
+  .theme-toggle .sun-and-moon {
+    @media (prefers-reduced-motion: no-preference) {
+      & > .sun {
+        transition: transform .5s var(--ease-elastic-3);
+      }
+  
+      & > .sun-beams {
+        transition:
+          transform .5s var(--ease-elastic-4)
+          opacity .5s var(--ease-3);
+      }
+  
+      & .moon > circle {
+        transition: transform .25s var(--ease-out-5);
+      }
     }
   }
 }
@@ -88,22 +92,26 @@
     & > .moon > circle {
       transform: translateX(-7px);
     }
-
-    @media (prefers-reduced-motion: no-preference) {
-      & > .sun {
-        transform: scale(1.75);
-        transition-timing-function: var(--ease-3);
-        transition-duration: .25s;
-      }
-
-      & > .sun-beams {
-        transform: rotateZ(-25deg);
-        transition-duration: .15s;
-      }
-
-      & > .moon > circle {
-        transition-delay: .25s;
-        transition-duration: .5s;
+  }
+  
+  &[data-loading="complete"] {
+    .theme-toggle .sun-and-moon {
+      @media (prefers-reduced-motion: no-preference) {
+        & > .sun {
+          transform: scale(1.75);
+          transition-timing-function: var(--ease-3);
+          transition-duration: .25s;
+        }
+  
+        & > .sun-beams {
+          transform: rotateZ(-25deg);
+          transition-duration: .15s;
+        }
+  
+        & > .moon > circle {
+          transition-delay: .25s;
+          transition-duration: .5s;
+        }
       }
     }
   }
